# sisutil

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md  changelog.md  mkpkg.py
.github/workflows/: cmake.yml
cmake/: print.cmake  utils.cmake
docs/: CHANGELOG.md  CLONE.md  ENVIRONMENT.md  INSTALL.md  NOTES.md  SETUP.md
docs/ubuntu/: INSTALL1.md
docs/ubuntu/linux/: LINUX.md
docs/ubuntu/macos/parallels/: MACOS.md
docs/ubuntu/windows/virtualbox/: FILES.md  VIRTUALBOX.md
docs/ubuntu/windows/wsl/: BACKUP.md  CPP.md  DISTRO.md  ENABLE.md  INSTALL.md  PYTHON.md  START.md
include/extras_cpp/: version.hpp
include/extras_cpp/game/: ChessGame.hpp
include/sisutil/: ACL.hpp  ACLRep.hpp  DCEError.hpp  DatedOp.hpp  DeleteMe.hpp  ErrCheck.hpp  ErrLog.hpp  Error.hpp  GMLock.hpp  InCoreACLRep.hpp  Marshall.hpp  Mutex.hpp  OCIMarsh.hpp  RMServer.hpp  RPCMarsh.hpp  SISDate.hpp  TextSet.hpp  Uuid.hpp  VTabClient.hpp  ValBase.hpp  YUApp.hpp  YUAppErr.hpp  YUBIMErr.hpp  YUBase.hpp  YUBool.hpp  YUCont.hpp  YUDate.hpp  YUError.h  YUError.hpp  YUFChar.hpp  YUFlatArray.h  YUIDLErr.hpp  YUNum.hpp  YURaw.hpp  YUString.hpp  YUUuid.hpp  delimfs.hpp  lstring.h  psconnection.hpp  toString.hpp  (+1 more)
include/sisutil/game/: ChessGame.hpp
instances/: main.cpp
src/: ACL.cpp  ACLRep.cpp  DCEError.cpp  DatedOp.cpp  ErrLog.cpp  Error.cpp  GMLock.cpp  InCoreACLRep.cpp  Marshall.cpp  Mutex.cpp  SISDate.cpp  TextSet.cpp  Uuid.cpp  VTabClient.cpp  ValBase.cpp  YUApp.cpp  YUAppErr.cpp  YUBool.cpp  YUDate.cpp  YUError.cpp  YUFChar.cpp  YUNum.cpp  YURaw.cpp  YUString.cpp  YUUuid.cpp  delimfs.cpp  psconnection.cpp  quintus_tcp.cpp  quintus_tcp.h  toString.cpp
src/game/: ChessGame.cpp
test/chessgame/: mock_ChessGame.cpp  test_ChessGame.cpp
test/error/: test_Error.cpp
test/rm/: test_Error.cpp
test/toString/: SisUtilTests.cpp
